cicd/argo/gitops-kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blogmd
  labels:
    name: blogmd
