cicd/argo/gitops-kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: blog
  labels:
    app.kubernetes.io/version: "90ed91e.20230913124559"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      volumes:
        - name: workdir
          emptyDir: {}
      containers:
        - name: blogrunner
          image: quay.io/telefonicadevops/blogrunner:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: workdir
              mountPath: /workdir
        - name: md2pdf
          image: bladerunner2020/markdown-to-file
          imagePullPolicy: Always
          volumeMounts:
            - name: workdir
              mountPath: &pdf_collection_base_path /usr/local/documents/mscastro
          command:
            - /bin/sh
          args:
            - -c
            - "while true; do \n  for md in `find $PDF_COLLECTION_BASE_PATH -name \"*.md\" -newermt \"10 seconds ago\" -size +10c | grep -v 404 | grep -v $PDF_COLLECTION_BASE_PATH/bundle | grep -v $PDF_COLLECTION_BASE_PATH/site`; do \n    m2f $md pdf \\\n      footerTemplate=\"<div style=\\\"font-size: 9px; margin: 0 auto;\\\"> <span class=\"pageNumber\"></span> / <span class=\"totalPages\"></span></div>\" \\\n      headerTemplate=\"<span/>\" margin.top=\"0.8cm\" \n  done\n  sleep 10\ndone       [...]
