cicd/argo/gitops-kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blogmd
  namespace: blogmd
spec:
  ports:
    - port: 4000
  selector:
    app: blogmd
