cicd/argo/gitops-kustomize/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: blogmd
  namespace: blogmd  
  labels:
    app: blogmd
spec:
  to:
    kind: Service
    name: blogmd
    weight: 100
  port:
    targetPort: 4000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
